fix: prevent wrapping in time inputs

--- a/apps/client/src/views/cuesheet/cuesheet-table/cuesheet-table-elements/TextLikeInput.module.scss
+++ b/apps/client/src/views/cuesheet/cuesheet-table/cuesheet-table-elements/TextLikeInput.module.scss
@@ -4,6 +4,7 @@
   background-color: transparent;
   border-radius: $component-border-radius-md;
   text-wrap: nowrap;
+  white-space: nowrap;
 
   display: flex;
   align-items: center;
